test/compile_errors/stage1/obj/comptime_ptrcast_of_zero-sized_type.zig
fn foo() void {
    const node: struct {} = undefined;
    const vla_ptr = @ptrCast([*]const u8, &node);
    _ = vla_ptr;
}
comptime { foo(); }

// error
// backend=stage1
// target=native
//
// tmp.zig:3:21: error: '*const struct:2:17' and '[*]const u8' do not have the same in-memory representation
